Add payment gateway management to admin panel
- Backend: Stripe and PayPal SDK integration
- Backend: Payment settings API (CRUD operations)
- Backend: Test connection endpoints for both gateways
- Database: payment_settings and customer_purchases tables
- Admin UI: Payment settings page with configuration forms
- Admin UI: Enable/disable toggles and test mode switches
- Helpers: Stripe and PayPal client initialization
- Docs: Database setup guide for payment tables

--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -26,6 +26,10 @@
                     <span class="icon">💳</span>
                     <span>Subscription Plans</span>
                 </a>
+                <a href="/admin/payment-settings" class="nav-item">
+                    <span class="icon">💰</span>
+                    <span>Payment Gateways</span>
+                </a>
             </nav>
 
             <div class="sidebar-footer">
